Add sample events to the homepage (world cups etc)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,26 @@
 		<h1>Making sport calendars accessible to everyone</h1>
 		
 		<p>Our platform curates and delivers sport events in a range of different useful formats. Synchonise with your own calendar, share with your community, publish to your website.</p>
-		<p>We make it easy for anyone to get the information they want.</p>
-		<p>We even provide a simple interface for creating and managing your own sports calendar (for a small fee).</p>
+		<p>We make it easy for anyone to get the information they want, how they want it. Download to your mobile, add it to Outlook, even your web-based (Google, Office) apps.</p>
+
+		<h2>Here are just some of the major international events we're covering&hellip;</h2>
+
+		<ul>
+			<li>
+				<a href="#">Rugby World Cup 2015</a>
+			</li>
+			<li>
+				<a href="#">FA Premiership, Championship and other leagues</a>
+			</li>
+			<li>
+				<a href="#">EURO 2016</a>
+			</li>
+			<li>
+				<a href="#">FIFA World Cup 2018</a>
+			</li>
+		</ul>
+
+		<p>We even provide a simple interface for creating and managing your own sports calendar (for a small fee). Whether you run a mini league or amateur tournament, our app gives you the facility to share events with your fans and followers.</p>
 
 		<form>
 			<fieldset>
